--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,12 +5,15 @@
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    </style>
+
+    <style name="Theme.PoseDetection.Splash" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="background">@drawable/background_splash</item>
+        <item name="android:windowBackground">@drawable/background_splash</item>
+        <item name="android:statusBarColor">#3DDC84</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 </resources>
